--- a/templates/hosts.j2
+++ b/templates/hosts.j2
@@ -1,4 +1,3 @@
-{% for item in groups['rhel'] %}
-  {{ hostvars[item].ansible_enp0s8.ipv4.address }} {{ hostvars[item].ansible_fqdn }} {{ hostvars[item].ansible_hostname }} 
-  {{ hostvars[item]['ansible_facts']['default_ipv4']['address'] }} {{ hostvars[item]['ansible_facts']['fqdn'] }} {{ hostvars[item]['ansible_facts']['hostname'] }} 
-{% endfor %}   
+{% for host in groups['all'] | sort %}
+{{ hostvars[host]['ansible_facts']['default_ipv4']['address'] }} {{ hostvars[host]['ansible_facts']['fqdn'] }} {{ hostvars[host]['ansible_facts']['hostname'] }}
+{% endfor %}
